SERVER-48054 On startup, upgrade all downgraded unique indexes to the latest format version