src/mongo/db/storage/durable_catalog_impl.cpp
@@ -975,6 +975,15 @@ void DurableCatalogImpl::updateValidator(OperationContext* opCtx,
     putMetaData(opCtx, catalogId, md);
 }
 
+void DurableCatalogImpl::updateIndexMetadata(OperationContext* opCtx,
+                                             RecordId catalogId,
+                                             const IndexDescriptor* desc) {
+    // Update any metadata Ident has for this index
+    const string ident = getIndexIdent(opCtx, catalogId, desc->indexName());
+    auto kvEngine = _engine->getEngine();
+    kvEngine->alterIdentMetadata(opCtx, ident, desc);
+}
+
 Status DurableCatalogImpl::removeIndex(OperationContext* opCtx,
                                        RecordId catalogId,
                                        StringData indexName) {
@@ -1199,6 +1208,19 @@ void DurableCatalogImpl::getReadyIndexes(OperationContext* opCtx,
     for (unsigned i = 0; i < md.indexes.size(); i++) {
         if (md.indexes[i].ready)
             names->push_back(md.indexes[i].spec["name"].String());
+    }
+}
+
+void DurableCatalogImpl::getAllUniqueIndexes(OperationContext* opCtx,
+                                             RecordId catalogId,
+                                             std::vector<std::string>* names) const {
+    BSONCollectionCatalogEntry::MetaData md = getMetaData(opCtx, catalogId);
+
+    for (unsigned i = 0; i < md.indexes.size(); i++) {
+        if (md.indexes[i].spec["unique"]) {
+            std::string indexName = md.indexes[i].spec["name"].String();
+            names->push_back(indexName);
+        }
     }
 }
 
