src/mongo/db/storage/kv/kv_engine.h
@@ -218,6 +218,10 @@ public:
      */
     virtual void flushAllFiles(OperationContext* opCtx, bool callerHoldsReadLock) {}
 
+    virtual void alterIdentMetadata(OperationContext* opCtx,
+                                    StringData ident,
+                                    const IndexDescriptor* desc){};
+
     /**
      * See StorageEngine::beginBackup for details
      */
