src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.h
@@ -169,6 +169,10 @@ public:
 
     Status dropIdent(OperationContext* opCtx, RecoveryUnit* ru, StringData ident) override;
 
+    void alterIdentMetadata(OperationContext* opCtx,
+                            StringData ident,
+                            const IndexDescriptor* desc) override;
+
     Status okToRename(OperationContext* opCtx,
                       StringData fromNS,
                       StringData toNS,
